<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the list of pets -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".CatalogActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:minHeight="400dp">

        <TextView
            android:id="@+id/name_of_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/name_of_programmer"

            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#A2AAB0"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/num_of_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_of_pro"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:text="@string/number_of_programmer"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0"
            android:textStyle="italic|bold" />

        <ImageView
            android:id="@+id/empty_shelter_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/num_of_pro"
            android:layout_centerHorizontal="true"
            android:src="@drawable/workify" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_shelter_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="8dp"
            android:text="@string/empty_view_title_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#A2AAB0"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0"
            android:textStyle="italic|bold" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:src="@drawable/ic_add_black_24dp" />

    <TextView
        android:id="@+id/total_of_cash"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="4dp"
        android:minWidth="200dp"
        android:text="Total of day: 0"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
</RelativeLayout>